# lcScamp

./: .gitignore  README.md  chatService.py  chatService.service  jupyterTest.ipynb  main.py  playground.py  pyproject.toml  test.md
static/: chunk-BD6FQCZ4.js  chunk-CLLSBNXC.js  chunk-KF3DD73A.js  chunk-UVXLJ264.js  index.html  main-2ANHKW6S.js  main-NAYBDCVB.js  styles-CT27XWM4.css
